# PSPL

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  HEAD.json  MonkeyMaterial.psd  PSPLCommon.c  PSPLHash.h  PSPLInternal.h  README.md  api.docurium  bootstrap.sh  hash_builtin.c  monkey.blend  monkey.pspl  project.json  pspl.1.html
Extensions/: CMakeLists.txt
Extensions/GXSupport/: CMakeLists.txt  README.md  bytecode_playback.S  gx_offline.c  gx_offline.h  gx_regdef.h  gx_runtime.c  gx_runtime.h
Extensions/LightingManager/: README.md
Extensions/OpenGLSupport/: README.md
Extensions/PMDLFormat/: CMakeLists.txt  DataGeneration.md  PMDLBlenderInterface.c  PMDLBlenderInterface.h  PMDLCommon.h  PMDLRuntime.c  PMDLRuntimeLinAlgebra.h  PMDLRuntimeLinAlgebraPS.s  PMDLRuntimeLinAlgebraRef.c  PMDLRuntimeLinAlgebraSSE.s  PMDLRuntimeLoader.c  PMDLRuntimeProcessing.c  PMDLRuntimeProcessing.h  PMDLRuntimeRigging.c  PMDLRuntimeRigging.h  PMDLToolchain.c  README.md  Specification.md  VertexShaderRigging.md
Extensions/PMDLFormat/Blender/io_pmdl_export/: __init__.py  pmdl.py  pmdl_draw_col.py  pmdl_draw_collision.py  pmdl_draw_general.py  pmdl_draw_gx.py  pmdl_loop_vert.py  pmdl_par1_rigging.py  pmdl_par2_octree.py
Extensions/PMDLFormat/Blender/io_pmdl_server/: __init__.py  pmdl_server.py
Extensions/PMDLFormat/Blender/io_pspl/: __init__.py  pspl_uvgen.py  pspl_writer.py
Extensions/PSPL-IR/: CMakeLists.txt  IRToolchain.c
Extensions/PSPLBuiltins/: BuiltinsExt.c  BuiltinsToolchain.c  BuiltinsToolchainExt.c  BuiltinsToolext.c  CMakeLists.txt  CompilerBuiltins.c  CompilerBuiltins.h  PreprocessorBuiltins.c  PreprocessorBuiltins.h  README.md  runtime-test.c
Extensions/PSPL_IR/: CMakeLists.txt  CalcChain.c  CalcChain.h  IRRuntime.c  IRToolchain.c
Extensions/SceneManager/: CMakeLists.txt  SMRuntime.c
Extensions/TextureManager/: CMakeLists.txt  README.md  TMCommon.h  TMRuntime.c  TMRuntime_d3d.cpp  TMRuntime_d3d.h  TMRuntime_d3d11.cpp  TMRuntime_d3d11.h  TMToolchain.c  TMToolchain.h
Extensions/TextureManager/Decoders/: CMakeLists.txt
Extensions/TextureManager/Decoders/CoreGraphics/: CMakeLists.txt  coregraphics_dec.c
Extensions/TextureManager/Decoders/OpenRaster/: README.md
Extensions/TextureManager/Decoders/PSD/: CMakeLists.txt  README.md  psd_dec.c
Extensions/TextureManager/Encoders/: CMakeLists.txt
Extensions/TextureManager/Encoders/RGB/: CMakeLists.txt  rgb_enc.c  rgba_enc.c
Extensions/TextureManager/PSDSupport/: README.md
Extensions/TextureManager/XCFSupport/: README.md
Extensions/TextureManager/cmake/: pspl_tm_config.c.in  pspl_tm_dec_def.h.in  pspl_tm_enc_def.h.in
Hash/: CMakeLists.txt  hash_builtin.h  hash_commoncrypto.h  hash_openssl.h  hash_windows.h
PSPL.xcodeproj/: project.pbxproj
Runtime/: CMakeLists.txt  README.md  RuntimeCore.c  RuntimeThreads.c  RuntimeWiiHeaps.c
Test/: CMakeLists.txt  test_mac.c  test_wii.c  test_win.c  test_win.cpp
Toolchain/: Buffer.c  Buffer.h  CMakeLists.txt  Compiler.c  Compiler.h  Driver.c  Driver.h  ObjectIndexer.c  ObjectIndexer.h  Option.h  PSPL.1.md  Packager.c  Packager.h  Preprocessor.c  Preprocessor.h  README.md  ReferenceGatherer.c  ReferenceGatherer.h  SyntaxParser.c  SyntaxParser.h  pspl.1  pspl.1.html  pspl.1.md
cmake/: FindDirectX11.cmake  FindGCD.cmake  FindMacSDK.cmake  PSPL-RTConfig.cmake.in  PSPLArtPipelineMacros.cmake  PSPLConfig.cmake.in  PSPLExtensionMacros.cmake  README.md  ToolchainCrossDarwinMinGW32.cmake  ToolchainCrossWindows.cmake
cmake/Templates/: PSPLAvailableExtensions.c.in  PSPLAvailableExtensions.h.in  PSPLExtensionDefTemplate.h.in  pspl_available_extensions.c.in  pspl_extension_def.h.in  pspl_platform_def.h.in  pspl_runtime_platform_typefile.h.in  pspl_runtime_platform_typefile.pch.in  pspl_toolchain_platform_typefiles.h.in
include/: PMDLRuntime.h  PMDLRuntimeRigging.h  PSPLExtension.h  PSPLPlatform.h  PSPLRuntime.h
include/PSPL/: PSPL.h  PSPLCommon.h  PSPLExtension.h  PSPLHash.h  PSPLMinGWD3D11Support.h  PSPLRuntimeExtension.h  PSPLRuntimeThreads.h  PSPLToolchainExtension.h  PSPLValue.h  PSPL_IR.h
include/PSPL/Hash/: hash_builtin.h  hash_commoncrypto.h  hash_openssl.h
include/PSPL/Runtime/: PSPLRuntimeCommand.h  PSPLRuntimeExtension.h
include/PSPL/Toolchain/: PSPLPreprocessorDirective.h  PSPLToolchainExtension.h
